<resources>
    <string name="app_name">MyBlog App</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang,\nJawahiir Abdillah</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="edit_menu_options">Edit</string>
    <string name="delete_menu_options">Delete</string>
    <string name="post_name">Jawahiir Abdillah</string>
    <string name="post_title">Sejarah Pembuatan Bom Atom AS</string>
    <string name="post_date">20 minutes ago</string>
    <string name="post_desc">Deskripsi tentang pembuatan bom atom di Amerika Serikat.</string>
    <string name="like_count">15</string>
    <string name="comment_count">10</string>
    <string name="title_comment">Komentar</string>
    <string name="title_editpost">Edit Post</string>
    <string name="btn_editpost">Simpan</string>
    <string name="title_add_post">Tambah Post</string>
    <string name="pilih_foto">Pilih foto</string>
    <string name="btn_add_post" />
    <string name="btn_upload_post">Upload</string>
    <string name="post_comments">Wah ini sangat seru!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="title_profile">My Profile</string>
    <string name="ubah_foto">Ubah foto</string>
    <string name="nama_depan">Nama depan</string>
    <string name="nama_belakang">Nama belakang</string>
    <string name="btn_simpan_edtprofile">Simpan</string>
    <string name="read_more">Baca selengkapnya</string>
    <string name="email_user">Email</string>
    <string name="postingan">Postingan</string>
    <string name="title_like">Suka</string>
    <string name="name_search">Search Blogs</string>
    <string name="post_like">5 suka</string>
    <string name="post_comment">10 komentar</string>
    <string name="title_postdetail">Detail Post</string>
</resources>