<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.EditProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_1sdp"
        app:title=" ">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="goBack"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:fontFamily="@font/karla_bold"
            android:textColor="@color/colorHitamMuda"
            android:textSize="@dimen/_15ssp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/photo_profile"
            android:id="@+id/ivPhoto"
            android:layout_marginBottom="@dimen/_18sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_foto"
            android:fontFamily="@font/karla_smbold"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:id="@+id/tvSelectPhoto"
            android:textSize="@dimen/_14ssp"
            android:layout_marginBottom="@dimen/_23sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEditLayoutNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEditNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla_smbold"
                android:hint="@string/nama_depan"
                android:inputType="textPersonName|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/txtEditLayoutLastnameProfile"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditLastnameProfile"
                android:fontFamily="@font/karla_smbold"
                android:hint="@string/nama_belakang"
                android:inputType="textPersonName|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/txtEditLayoutEmailProfile"
            android:layout_marginBottom="@dimen/_45sdp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditEmailProfile"
                android:fontFamily="@font/karla_smbold"
                android:hint="@string/email_user"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSimpanEditProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_shape_round"
        android:elevation="0dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/btn_simpan_edtprofile"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp" />

    </LinearLayout>


</LinearLayout>