<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_9sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/ivPostProfile"
                android:src="@color/colorLightGrey"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_7sdp">

                <TextView
                    android:id="@+id/tvPostName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/colorHitamMuda"
                    android:text="@string/post_name"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:id="@+id/btnPostOption"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_horizontal"/>


        </LinearLayout>

        <View
            android:layout_width="@dimen/_280sdp"
            android:layout_gravity="center"
            android:layout_height="2px"
            android:background="@color/colorLightGrey"/>

        <TextView
            android:id="@+id/tvPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/nunitosans_smbold"
            android:textColor="@color/colorBlack"
            android:text="@string/post_title"
            android:maxLength="50"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/ivPostPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:src="@color/colorLightGrey"/>

        <TextView
            android:id="@+id/tvPostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_regular"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:text="@string/post_date"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tvPostDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:lineHeight="@dimen/_17sdp"
            android:maxLength="1500"
            android:text="@string/post_desc"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/montserrat_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp">

            <ImageButton
                android:id="@+id/btnPostLike"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_fav_border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_12sdp"
                android:text="@string/post_like"
                android:id="@+id/tvPostLikes"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:id="@+id/btnPostComment"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_comment_border"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/tvPostComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/post_comment"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="#e9e9e9" />

    </LinearLayout>

</androidx.cardview.widget.CardView>