<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_20sdp"
    android:paddingRight="@dimen/_20sdp"
    tools:context=".ui.activity.SignInActivity">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/logoapp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:fontFamily="@font/karla_bold"
        android:textColor="@color/colorHitamMuda"
        android:text="@string/sign_in"
        android:textSize="@dimen/_21ssp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla_smbold"
            android:textColor="@color/colorHitamMuda"
            android:hint="Email"
            android:textSize="@dimen/_15ssp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50sdp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla_smbold"
            android:textColor="@color/colorHitamMuda"
            android:hint="Password"
            android:textSize="@dimen/_15ssp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_45sdp"
        android:background="@drawable/btn_shape_round"
        android:fontFamily="@font/karla_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/karla_smbold"
            android:text="@string/no_account"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6sdp"
            android:fontFamily="@font/karla_smbold"
            android:text="@string/daftar"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</LinearLayout>