<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_5sdp"
    tools:context=".ui.activity.PostDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbPostDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_1sdp"
        app:title=" ">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="goBack"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_postdetail"
            android:fontFamily="@font/karla_bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15ssp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_6sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:id="@+id/ivPostDetailPhotoUser"
                    android:src="@drawable/photo_profile"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPostDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_smbold"
                        android:textColor="@color/colorHitamMuda"
                        android:text="@string/post_name"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tvPostDetailDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/post_date"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnPostDetailOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_more"/>
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPostDetailPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@color/colorLightGrey"
                app:shapeAppearanceOverlay="@style/RoundedImageView" />

            <TextView
                android:id="@+id/tvPostDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/averia_bold"
                android:textColor="@color/colorBlack"
                android:text="@string/post_title"
                android:textSize="@dimen/_17ssp" />

            <TextView
                android:id="@+id/tvPostDetailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:lineHeight="@dimen/_17sdp"
                android:text="@string/post_desc"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"/>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_gravity="center"
                android:layout_height="1px"
                android:background="@color/colorLightGrey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_8sdp">

                <ImageButton
                    android:id="@+id/btnPostDetailLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_fav_border" />

                <TextView
                    android:id="@+id/tvPostDetailLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/post_like"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_regular"/>

                <ImageButton
                    android:id="@+id/btnPostDetailComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_comment_border"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/tvPostDetailComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/post_comment"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>